--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -8,6 +8,7 @@
   "OSE.Reset": "Reinciar",
   "OSE.Cancel": "Cancelar",
   "OSE.Roll": "Tirar",
+  "OSE.Reroll": "Repetir tirada",
   "OSE.Success": "Éxito",
   "OSE.Failure": "Fallo",
   "OSE.dialog.tweaks": "Ajustes",
